# structdiff

./: Cargo.toml
structdiff/: Cargo.toml
structdiff-derive/: Cargo.toml
structdiff-derive/src/: lib.rs
structdiff-macro/: Cargo.toml
structdiff-macro/src/: lib.rs
structdiff/src/: lib.rs
