[package]
name = "structdiff-macro"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@technocreatives.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.5"
proc-macro2 = "1.0.3"
quote = "1.0.2"
log = "0.4.8"
heck = "0.3"

[dev-dependencies]
assert_tokens_eq = "0.1.0"
